--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ canonical: https://jie-jw-wu.github.io/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-cv_link: assets/ResumeJW.pdf
+cv_link: assets/cv_jw.pdf
 github_link: https://github.com/jie-jw-wu
 twitter: https://twitter.com/jw__wu
 
