--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ canonical: https://jie-jw-wu.github.io/
 # If you don't need one of them, you may delete the corresponding line.
 cv_link: assets/cv_jw.pdf
 github_link: https://github.com/jie-jw-wu
+linkedin: https://www.linkedin.com/in/jiewu3
 twitter: https://twitter.com/jw__wu
 
 # Images (e.g., your profile picture and your website's favicon) 
