--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic Information 
 title: Jie “JW” Wu 
-position: Postdoctoral Fellow @ UBC
+position: Assistant Professor @ Michigan Tech
 affiliation: UBC, GW, SJTU, Ex-Snap Inc., Ex-MSR, Ex-Google Research
-email: jie.jw.wu (at) ubc.ca
+email: jie.jw.wu (at) mtu.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
